<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Main2Activity">



    <TextView
        android:id="@+id/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/historyHeader"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

    <TextView
        android:id="@+id/textt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:text="@string/tenth"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="65dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="30dp"
        android:text="@string/ninth"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="132dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        android:text="@string/eighth"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="120dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="30dp"
        android:text="@string/seventh"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="100dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="30dp"
        android:text="@string/sixth"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="135dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="30dp"
        android:text="@string/fifth"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="142dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="30dp"
        android:text="@string/fourth"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="120dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="30dp"
        android:text="@string/third"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="138dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginLeft="30dp"
        android:text="@string/second"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginLeft="108dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/textt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:layout_marginLeft="30dp"
        android:text="@string/first"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/text10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:layout_marginLeft="145dp"
        android:text="@string/result"
        android:textColor="#F4E689"
        android:textSize="25dp" />
    </LinearLayout>


</RelativeLayout>